<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutControlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewNames"
        tools:layout_editor_absoluteX="30dp">

        <Button
            android:id="@+id/btnAddUser"
            style="@style/mainButtonStyle"
            android:text="@string/addUser"/>

        <Button
            android:id="@+id/btnDeleteUser"
            style="@style/mainButtonStyle"
            android:text="@string/deleteUser"/>

        <Button
            android:id="@+id/btnEditDrinks"
            style="@style/mainButtonStyle"
            android:text="@string/editDrinks"/>

        <Button
            android:id="@+id/btnPay"
            style="@style/mainButtonStyle"
            android:text="@string/pay"/>

        <Button
            android:id="@+id/btnUebersicht"
            style="@style/mainButtonStyle"
            android:text="@string/uebersicht"/>
        <!--android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_margin="10dp"
        android:text="@string/uebersicht"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@color/buttongreen" />-->
    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/layoutFullMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnFullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/fullscreen"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="@color/buttongreen" />
    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>