<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutAddDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewAddDrink">

        <EditText
            android:id="@+id/tfDrinkName"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/drink"
            android:inputType="textPersonName|textCapWords"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/tfPrice"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck"
            android:autofillHints="no" />

        <Button
            android:id="@+id/btnAddDrink2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:text="@string/anlegen"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:backgroundTint="@color/buttongreen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>