<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<HorizontalScrollView
        android:id="@+id/horizontalScrollViewNames"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/namesDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" />
    </HorizontalScrollView>-->

    <LinearLayout
        android:id="@+id/layoutAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewAddUser">

        <EditText
            android:id="@+id/tfFirstName"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/firstName"
            android:inputType="textPersonName|textCapWords"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/tfLastName"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/lastName"
            android:inputType="textPersonName|textCapWords"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnAddUser2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:text="@string/anlegen"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:backgroundTint="@color/buttongreen" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>